apps/manifests/coder/coder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: coder
  labels:
    app: coder
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coder
